--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
   id 'org.jetbrains.intellij' version '0.6.5'
 }
 
-group 'org.intellij.sdk'
+group 'org.vadept'
 version '0.0.1'
 
 sourceCompatibility = 1.8
@@ -18,7 +18,7 @@ test {
   // on your local machine.
   // Use variants described in https://docs.gradle.org/current/userguide/build_environment.html
   // for real world projects.
-  systemProperty "idea.home.path", "/home/slavazais/projects/jetbrains/intellij-community"
+  systemProperty "idea.home.path", "../../jetbrains/intellij-community"
 }
 
 // Include the generated files in the source set
